--- a/.gitignore
+++ b/.gitignore
@@ -48,4 +48,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
+#json-localstorage
+.storage.json
 
+#npm
+npm-debug.log
