--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "localStorage"
   ],
   "author": "Will Munslow",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "@types/node": "^7.0.27"
+  }
 }
