--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.4.0",
   "description": "A clone of the Web Storage API for node using a JSON file for data",
   "main": "json-localstorage.js",
+  "types": "json-localstorage.d.ts",
   "config": {
     "filepath": ".storage.json"
   },
